--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "sass": "^1.62.1",
+    "sharp": "^0.32.1",
     "typescript": "5.0.4"
   }
 }
